update orderSpilit and json impletment

--- a/shopServer/templates/orderManage.html
+++ b/shopServer/templates/orderManage.html
@@ -115,6 +115,13 @@
 					oneOrder(data[i])
 				}
 			}
+
+			$('.delete').click(function() {
+				console.log("***************");
+				var that = $(this).parents('tr');
+				var objData = that.attr('orderid')
+				deleteOneDataById(objData, that);
+			})
 		}
 
 		function oneOrder(data) {
@@ -134,11 +141,7 @@
 
 			var myHtml = '<tr class="mytr" orderid="' + orderid + '"><td class="info ele"><input class="checkbox-one" name="checkbox-one" type="checkbox"/></td><td scope="row">' + m + '</td><td>' + orderid + '</td><td>' + userid + '</td><td>' + price + '</td><td>' + ordertime + '</td><td>' + thestatus + '</td><td > <button class="btn btn-default delete">删除</button></td></tr>'
 			$(".myListTable").append(myHtml)
-			$('.delete').click(function() {
-				var that = $(this).parents('tr');
-				var objData = that.attr('orderid')
-				deleteOneDataById(objData, that);
-			})
+			
 		}
 
 		// 根据id删除一条数据
@@ -148,8 +151,12 @@
 			}, function(data) {
 				// 警告,需要加判断,服务器删除成功之后才能移除标签 
 				// 另外删除成功之后 要增加弹框提示
-				console.log(data)
-				$(ele).remove();
+				if (data.status == "ok") {
+					layer.msg("删除成功");
+					$(ele).remove();
+				} else {
+					layer.msg("删除失败");
+				}
 			})
 		}
 
