--- a/shopServer/templates/base.html
+++ b/shopServer/templates/base.html
@@ -12,11 +12,13 @@
 		<link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 		<link rel="stylesheet" href="{% static 'dist/css/AdminLTE.min.css' %}">
 		
-		<script type="text/javascript">
+		<!-- <script type="text/javascript">
 			if (localStorage.getItem("keySss")!="ok"){
 				window.location.href="http://localhost:8000"
+				var data = JSON.parse(localStorage.getItem("data"));
+				console.log(data);
 			}
-		</script>
+		</script> -->
 		
 		<link rel="stylesheet" href="{% static 'dist/css/skins/_all-skins.min.css' %}">
 
@@ -38,8 +40,8 @@
 
 				<!-- logo -->
 				<a href="###" class="logo">
-					<span class="logo-mini"><b>张</b>三</span>
-					<span class="logo-lg"><b>张</b>山山</span>
+					<span class="logo-mini"><b><label for="" id="namelabel"></label></b></span>
+					<span class="logo-lg"><b><label for="" id="namelabel"></label></b></span>
 				</a>
 
 				<!-- 导航条 -->
@@ -257,7 +259,7 @@
 							<li class="dropdown user user-menu">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 									<img src="{% static 'dist/img/user2-160x160.jpg' %}" class="user-image" alt="User Image">
-									<span class="hidden-xs">张三</span>
+									<span class="hidden-xs"><label for="" id="namelabel"></label></span>
 								</a>
 								<ul class="dropdown-menu">
 									<!-- User image -->
@@ -265,7 +267,7 @@
 										<img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 
 										<p>
-											张三 - 网页开发
+											<label for="" id="xxxxxxxx" name="namelabel" value="" ></label> - 网页开发
 											<small>2017年12月</small>
 										</p>
 									</li>
@@ -290,7 +292,7 @@
 											<a href="#" class="btn btn-default btn-flat">个人资料</a>
 										</div>
 										<div class="pull-right">
-											<a href="#" class="btn btn-default btn-flat">退出</a>
+											<a href="#" class="btn btn-default btn-flat exit">退出</a>
 										</div>
 									</li>
 								</ul>
@@ -313,8 +315,8 @@
 							<img src="{% static 'dist/img/user2-160x160.jpg' %}" class="img-circle" alt="User Image">
 						</div>
 						<div class="pull-left info">
-							<p>张三</p>
-							<a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
+							<h4><label for="" id="yyy" name="namelabel" value="" ></label></h4>
+							<!-- <label for="" id="xxxxxxxx" name="namelabel" value="" ></label> -->
 						</div>
 					</div>
 					<!-- 左侧搜索框部分 -->
@@ -367,6 +369,7 @@
 									<a href="/goodsManage/"><i class="fa fa-clock-o"></i> 商品列表</a>
 								</li>
 								<li >
+									
 									<a href="###"><i class="fa fa-clock-o"></i> 目录管理</a>
 								</li>
 							</ul>
@@ -387,7 +390,7 @@
 									<a href="/redpack/"><i class="fa fa-flag"></i> 红包设置</a>
 								</li>
 								<li >
-									<a href="home/"><i class="fa fa-flag"></i> 店铺消费记录</a>
+									<a href="/settings/"><i class="fa fa-flag"></i> 店铺消费记录</a>
 								</li>
 							</ul>
 						</li>
@@ -462,185 +465,49 @@
 				<!-- Create the tabs -->
 				<ul class="nav nav-tabs nav-justified control-sidebar-tabs">
 					<li>
-						<a href="#control-sidebar-home-tab" data-toggle="tab"><i class="fa fa-home"></i></a>
+							<div class="tab-pane" id="control-sidebar-settings-tab" style="margin-left:25px">
+									<form method="post">
+										<h3 class="control-sidebar-heading"><a href="##" style="color:white">红包设置</a></h3>
+			
+										
+										<div class="form-group">
+										</div>
+									
+			
+										<div class="form-group">
+											
+										</div>
+			
+										<h3 class="control-sidebar-heading" href="###"><a href="##" style="color:white">返利设置</a></h3>
+			
+										<div class="form-group">
+											
+										</div>
+			
+										<div class="form-group">
+											<!-- <label class="control-sidebar-subheading">
+						  Turn off notifications
+						  <input type="checkbox" class="pull-right">
+						</label> -->
+										</div>
+										<div class="form-group">
+											<!-- <label class="control-sidebar-subheading">
+						  Delete chat history
+						  <a href="javascript:void(0)" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
+						</label> -->
+										</div>
+										<h3 class="control-sidebar-heading" href="###"><a href="##" style="color:white">福袋设置</a></h3>
+									</form>
+								</div>
 					</li>
-					<li>
+					<!-- <li>
 						<a href="#control-sidebar-settings-tab" data-toggle="tab"><i class="fa fa-gears"></i></a>
-					</li>
+					</li> -->
 				</ul>
 				<!-- Tab panes -->
 				<div class="tab-content">
-					<!-- Home tab content -->
-					<div class="tab-pane" id="control-sidebar-home-tab">
-						<h3 class="control-sidebar-heading">Recent Activity</h3>
-						<ul class="control-sidebar-menu">
-							<li>
-								<a href="javascript:void(0)">
-									<i class="menu-icon fa fa-birthday-cake bg-red"></i>
-
-									<div class="menu-info">
-										<h4 class="control-sidebar-subheading">Langdon's Birthday</h4>
-
-										<p>Will be 23 on April 24th</p>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)">
-									<i class="menu-icon fa fa-user bg-yellow"></i>
-
-									<div class="menu-info">
-										<h4 class="control-sidebar-subheading">Frodo Updated His Profile</h4>
-
-										<p>New phone +1(800)555-1234</p>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)">
-									<i class="menu-icon fa fa-envelope-o bg-light-blue"></i>
-
-									<div class="menu-info">
-										<h4 class="control-sidebar-subheading">Nora Joined Mailing List</h4>
-
-										<p>nora@example.com</p>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)">
-									<i class="menu-icon fa fa-file-code-o bg-green"></i>
-
-									<div class="menu-info">
-										<h4 class="control-sidebar-subheading">Cron Job 254 Executed</h4>
-
-										<p>Execution time 5 seconds</p>
-									</div>
-								</a>
-							</li>
-						</ul>
-						<!-- /.control-sidebar-menu -->
-
-						<h3 class="control-sidebar-heading">Tasks Progress</h3>
-						<ul class="control-sidebar-menu">
-							<li>
-								<a href="javascript:void(0)">
-									<h4 class="control-sidebar-subheading">
-                Custom Template Design
-                <span class="label label-danger pull-right">70%</span>
-              </h4>
-
-									<div class="progress progress-xxs">
-										<div class="progress-bar progress-bar-danger" style="width: 70%"></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)">
-									<h4 class="control-sidebar-subheading">
-                Update Resume
-                <span class="label label-success pull-right">95%</span>
-              </h4>
-
-									<div class="progress progress-xxs">
-										<div class="progress-bar progress-bar-success" style="width: 95%"></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)">
-									<h4 class="control-sidebar-subheading">
-                Laravel Integration
-                <span class="label label-warning pull-right">50%</span>
-              </h4>
-
-									<div class="progress progress-xxs">
-										<div class="progress-bar progress-bar-warning" style="width: 50%"></div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0)">
-									<h4 class="control-sidebar-subheading">
-                Back End Framework
-                <span class="label label-primary pull-right">68%</span>
-              </h4>
-
-									<div class="progress progress-xxs">
-										<div class="progress-bar progress-bar-primary" style="width: 68%"></div>
-									</div>
-								</a>
-							</li>
-						</ul>
-						<!-- /.control-sidebar-menu -->
-
-					</div>
-					<!-- /.tab-pane -->
-
-					<!-- Settings tab content -->
-					<div class="tab-pane" id="control-sidebar-settings-tab">
-						<form method="post">
-							<h3 class="control-sidebar-heading"><a href="##" style="color:white">红包设置</a></h3>
-
-							<div class="form-group">
-								<!-- <label class="control-sidebar-subheading">
-              Report panel usage
-              <input type="checkbox" class="pull-right" checked>
-            </label>
-
-								<p>
-									Some information about this general settings option
-								</p> -->
-							</div>
-							<!-- /.form-group -->
-
-							<div class="form-group">
-								<!-- <label class="control-sidebar-subheading">
-              返利设置
-              <input type="checkbox" class="pull-right" checked>
-            </label>
-
-								<p>
-									Other sets of options are available
-								</p> -->
-							</div>
-							<!-- /.form-group -->
-
-							<div class="form-group">
-								<!-- <label class="control-sidebar-subheading">
-              返利设置
-              <input type="checkbox" class="pull-right" checked>
-            </label>
-
-								<p>
-									Allow the user to show his name in blog posts
-								</p> -->
-							</div>
-
-							<h3 class="control-sidebar-heading" href="###"><a href="##" style="color:white">返利设置</a></h3>
-
-							<div class="form-group">
-								<!-- <label class="control-sidebar-subheading">
-              Show me as online
-              <input type="checkbox" class="pull-right" checked>
-            </label> -->
-							</div>
-
-							<div class="form-group">
-								<!-- <label class="control-sidebar-subheading">
-              Turn off notifications
-              <input type="checkbox" class="pull-right">
-            </label> -->
-							</div>
-							<div class="form-group">
-								<!-- <label class="control-sidebar-subheading">
-              Delete chat history
-              <a href="javascript:void(0)" class="text-red pull-right"><i class="fa fa-trash-o"></i></a>
-            </label> -->
-							</div>
-							<h3 class="control-sidebar-heading" href="###"><a href="##" style="color:white">福袋设置</a></h3>
-						</form>
-					</div>
+					<!-- Home tab content
+					<div class="tab-pane" id="control-sidebar-home-tab"> -->
 				</div>
 			</aside>
 
@@ -667,6 +534,10 @@
 
 		<script src="{% static 'js/tool.js' %}"></script>
 		<script type="text/javascript">
+			$(".exit").click(function(){
+				localStorage.clear();
+				$(".exit").attr("href" , "http://localhost:8000")
+			})
 			
 			$('.treeview-menu').find('a').each(function() {
 				if(this.href == document.location.href || document.location.href.search(this.href) >= 0) {
@@ -674,6 +545,22 @@
 					$(this).parents(".treeview").addClass('active');
 				}
 			});
+			if (localStorage.getItem("keySss")!="ok"){
+				console.log("--------------------")
+				window.location.href="http://localhost:8000"
+				var data = JSON.parse(localStorage.getItem("data"));
+				$("#goodsname").val(data.names);
+				myfun("#goodsname");
+				console.log(data);
+			}
+			else{
+				console.log("--------------------")
+				var data = JSON.parse(localStorage.getItem("data"));
+				aaa=data.names;
+				console.log(aaa);
+				document.getElementById('xxxxxxxx').innerHTML = aaa;
+				document.getElementById('yyy').innerHTML = aaa;			
+			}
 		</script>
 		{% block script %}{% endblock %}
 	</body>
