--- a/shopServer/templates/changePic.html
+++ b/shopServer/templates/changePic.html
@@ -65,20 +65,9 @@
 			}
 		
 		
-		var url="http://localhost:8000/goodsSelectByid/";
+//		var url="http://localhost:8000/goodsSelectByid/";
 		var goodsid = getUrlParam("goodsid")
-
-
-
-		$.ajax({
-			url: url, 
-			type: 'POST', 
-			success:"success",
-			data:{goodsid:goodsid},
-			success: function (data) {
-
-
-				
+		myPost("goodsSelectByid/",{goodsid:goodsid},function(data){
 				for(var i=0;i<data.data.length;i++){
 					console.log(data.data[i])
 					console.log(data.data[i].goodsid)
@@ -131,33 +120,125 @@
 								console.log(finalUrl)
 								console.log(goodsid)
 								
+								myPost("goodsManageJsonUpdata/",{"images":finalUrl,"goodsid":goodsid},function(data){
+									console.log("ajax发送请求成功")
+									location.reload() 
+									
+								})
 								
-								$.ajax({
-									url: "http://localhost:8000/goodsManageJsonUpdata/", 
-									type: 'POST', 
-									success:"success",
-									data:{"images":finalUrl,"goodsid":goodsid},
-									success: function (data) {
-										
-										console.log("ajax发送请求成功")
-										location.reload() 
-										
-									}, 
-									error: function (msg) {
-										console.log("error 加载数据失败")
-								
-									}
+//								$.ajax({
+//									url: "http://localhost:8000/goodsManageJsonUpdata/", 
+//									type: 'POST', 
+//									success:"success",
+//									data:{"images":finalUrl,"goodsid":goodsid},
+//									success: function (data) {
+//										
+//										console.log("ajax发送请求成功")
+//										location.reload() 
+//										
+//									}, 
+//									error: function (msg) {
+//										console.log("error 加载数据失败")
+//								
+//									}
 								});
 								
 						})
 
 					}
-				}
-			}, 
-			error: function (msg) {
-				console.log("error 加载数据失败")
-		
-			}
-		});    
+				
+		})
+
+
+
+//		$.ajax({
+//			url: url, 
+//			type: 'POST', 
+//			success:"success",
+//			data:{goodsid:goodsid},
+//			success: function (data) {
+//
+//
+//				
+//				for(var i=0;i<data.data.length;i++){
+//					console.log(data.data[i])
+//					console.log(data.data[i].goodsid)
+//					if(data.data[i].goodsid == goodsid){
+//						
+//						var number = 1;
+//						var picName = data.data[i].images;
+//						console.log(picName);
+//						// var order = 1;
+//						var picNames = new Array()
+//						if (picName)
+//						{
+//							console.log(picName.indexOf("---"));
+//							if (picName.indexOf("---") >= 0)
+//							{
+//								console.log("hahhah");
+//								picNames =picName.split("---");
+//								console.log(picNames);
+//							}
+//						}
+//						if (picNames.length != 0)
+//						{
+//							for(var i=0;i<picNames.length-1;i++){
+//								newPic = picNames[i]
+//								number = i +1;
+//								var ele = '<tr class="mytr"><td style="text-align: center;vertical-align: middle;" width="10%">'+number+'</td><td class="mytd" style="text-align: center;vertical-align: middle;" width="50%"><img src="http://localhost:8000/static/myfile/'+ newPic +'" /></td><td style="text-align: center;vertical-align: middle;" width="20%">'+number+'</td><td style="text-align: center;vertical-align: middle;" width="20%"><span class="glyphicon glyphicon-trash delBtn" style="margin-left: 10px;"></span></td></tr>'
+//								$(".userTable").append(ele);
+//							}
+//						}
+//						else{
+//							alert("此商品没有图片");
+//							history.go(-1);
+//						}
+//						
+//						
+//						$(".delBtn").click(function(){
+//								var that = $(this).parents("tr")
+//								var a = that.children(".mytd")
+//								var b = $(a).children()
+//								
+////								获取图片链接c
+//								c = $(b)[0].src
+//								console.log(c)
+//								var urls = new Array()
+//								urls =c.split("/")
+//								//获取图片名
+//								getUrl = urls.pop()
+//								console.log(getUrl)
+//								finalUrl = picName.replace(getUrl+'---','')
+//								console.log(finalUrl)
+//								console.log(goodsid)
+//								
+//								
+//								$.ajax({
+//									url: "http://localhost:8000/goodsManageJsonUpdata/", 
+//									type: 'POST', 
+//									success:"success",
+//									data:{"images":finalUrl,"goodsid":goodsid},
+//									success: function (data) {
+//										
+//										console.log("ajax发送请求成功")
+//										location.reload() 
+//										
+//									}, 
+//									error: function (msg) {
+//										console.log("error 加载数据失败")
+//								
+//									}
+//								});
+//								
+//						})
+//
+//					}
+//				}
+//			}, 
+//			error: function (msg) {
+//				console.log("error 加载数据失败")
+//		
+//			}
+//		});    
 	</script>
 {% endblock%}
