--- a/shopServer/templates/drawManage.html
+++ b/shopServer/templates/drawManage.html
@@ -37,13 +37,13 @@
 <input type="submit" value="提交">
 </form>
 <br>
-<!-- <form action="http://localhost:8000/drawJsonUpdate/" method="post">
+<form action="http://localhost:8000/drawJsonUpdate/" method="post">
 <input type="text" name="userid" placeholder="请输入要修改的用户id">
 <br>
 <input type="text" name="drawmoney" placeholder="请输入余额">
 <br>
 <input type="submit" value="提交">
-</form> -->
+</form>
 <br>
 <form action="http://localhost:8000/drawJsonQuery/" method="post">
 <input type="text" name="userid" placeholder="请输入要查询的用户id">
