--- a/shopServer/templates/goodsManage.html
+++ b/shopServer/templates/goodsManage.html
@@ -662,55 +662,55 @@ $('#checkbox-all').click(function () {
 myflag=0
 
 
-function addFenyeHtml (yeNumber) {
-	console.log("******************addFenyeHtml");
-	if (defaultOptions != "") {
+// function addFenyeHtml (yeNumber) {
+// 	console.log("******************addFenyeHtml");
+// 	if (defaultOptions != "") {
 		
-		var currentPage = fenye.twbsPagination('getCurrentPage');
-		if (currentPage > yeNumber) {
-			currentPage = 1;
-		}
-		var cucrrentOptioins = {
-			totalPages:yeNumber,
-			first: "首页",
-			last: "尾页",
-			prev: '上一页',
-			next: '下一页',
-			startPage: currentPage,
-			visiblePages: yeNumber>5?5:yeNumber,
-			version: '1.1',
-			initiateStartPageClick:false ,
-			onPageClick: function (event, page) {
-				console.log("page",page)
-				thispage = page
-				loaddata(page);
-			}
-		};
-		fenye.twbsPagination('destroy');
-		fenye.twbsPagination($.extend({}, defaultOptions, cucrrentOptioins));
-		defaultOptions = cucrrentOptioins;
-	} else {
-		var page = 1 
-		defaultOptions = {
-			totalPages:yeNumber,
-			first: "首页",
-			last: "尾页",
-			prev: '上一页',
-			next: '下一页',
-			startPage: 1,
-			visiblePages: yeNumber>5?5:yeNumber,
-			version: '1.1',
-			initiateStartPageClick:false , 
-			onPageClick: function (event, page) {
-				console.log(")))))))))))))))))))))))");
-				thispage = page
-				// $('#pagination').empty()
-				loaddata();
-			}
-		};
-		fenye.twbsPagination(defaultOptions);
-	}
-}
+// 		var currentPage = fenye.twbsPagination('getCurrentPage');
+// 		if (currentPage > yeNumber) {
+// 			currentPage = 1;
+// 		}
+// 		var cucrrentOptioins = {
+// 			totalPages:yeNumber,
+// 			first: "首页",
+// 			last: "尾页",
+// 			prev: '上一页',
+// 			next: '下一页',
+// 			startPage: currentPage,
+// 			visiblePages: yeNumber>5?5:yeNumber,
+// 			version: '1.1',
+// 			initiateStartPageClick:false ,
+// 			onPageClick: function (event, page) {
+// 				console.log("page",page)
+// 				thispage = page
+// 				loaddata(page);
+// 			}
+// 		};
+// 		fenye.twbsPagination('destroy');
+// 		fenye.twbsPagination($.extend({}, defaultOptions, cucrrentOptioins));
+// 		defaultOptions = cucrrentOptioins;
+// 	} else {
+// 		var page = 1 
+// 		defaultOptions = {
+// 			totalPages:yeNumber,
+// 			first: "首页",
+// 			last: "尾页",
+// 			prev: '上一页',
+// 			next: '下一页',
+// 			startPage: 1,
+// 			visiblePages: yeNumber>5?5:yeNumber,
+// 			version: '1.1',
+// 			initiateStartPageClick:false , 
+// 			onPageClick: function (event, page) {
+// 				console.log(")))))))))))))))))))))))");
+// 				thispage = page
+// 				// $('#pagination').empty()
+// 				loaddata();
+// 			}
+// 		};
+// 		fenye.twbsPagination(defaultOptions);
+// 	}
+// }
 
 function loaddata() {
 	$.ajax({
@@ -737,7 +737,11 @@ function loaddata() {
 			$("#visible-pages-example").children(".sumdiv").remove()
 			var spanele = '<span class="sumdiv">共' + goodsListPages + '页,当前第' + thispage + '页,共' + goodsCount + '条数据</span>'
 			$("#visible-pages-example").append($(spanele))
-			addFenyeHtml(goodsListPages)
+			createPageNav('#visible-pages-example' , goodsListPages , function(event , page){
+                thispage = page;
+                loaddata();
+            });
+			// addFenyeHtml(goodsListPages)
 		},
 		error: function (msg) {
 			console.log("error:获取数据失败")
