--- a/shopServer/templates/login.html
+++ b/shopServer/templates/login.html
@@ -144,7 +144,7 @@
 
 	changeCode();
 
-	// 刷新验证码的方法
+	// // 刷新验证码的方法
 	function changeCode() {
 		$.ajax({url:"http://localhost:8000/identificode/" , success:function (result) {
 			console.log(result);			
